Trying to fix text alignment

--- a/zev/assets/scss/_content.scss
+++ b/zev/assets/scss/_content.scss
@@ -40,7 +40,7 @@
     }
 
     p {
-      text-align: justify;
+      text-align: left;
       text-justify: auto;
       text-align-last: left;
       hyphens: auto;
